--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel='stylesheet' href='style.css'>
     </head>
     <body>
+	<h1>Test heading</h1>
         <p>This is a test paragraph.</p>
         <p>Another one.</p>
     </body>
