--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test page</title>
+        <title>Git Workshop</title>
         <meta charset='UTF-8'>
         <meta http-equiv='Content-Type' content='text/html'>
         <link rel='stylesheet' href='style.css'>
